--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -162,10 +162,10 @@
                 <p><strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con más de diez años de trayectoria.</p>
             </div>
 
-            <div class="flex gap-3">
-                <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
-                <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Universidad Nacional de Luján</strong>, base de su expertise en infraestructuras complejas, complementada con certificaciones internacionales de la <strong>OPS</strong> en <strong>Sistemas de Información para la Salud</strong> y el estándar de interoperabilidad <strong>HL7 FHIR</strong>.</p>
-            </div>
+         <div class="flex gap-3">
+    <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
+    <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios de <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, base de su expertise en infraestructuras complejas, complementada con certificaciones internacionales de la <strong>OPS</strong> en <strong>Sistemas de Información para la Salud</strong> y el estándar de interoperabilidad <strong>HL7 FHIR</strong>.</p>
+</div>
 
             <div class="flex gap-3">
                 <i class="ph-bold ph-gavel text-cura-accent shrink-0 text-xl"></i>
