--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,21 @@ document.addEventListener('DOMContentLoaded', function () {
 
 <script>
  window.difyChatbotConfig = {
-  token: 'u6ZRgC965S5ppUAP'
+  token: 'u6ZRgC965S5ppUAP',
+  inputs: {
+    // You can define the inputs from the Start node here
+    // key is the variable name
+    // e.g.
+    // name: "NAME"
+  },
+  systemVariables: {
+    // user_id: 'YOU CAN DEFINE USER ID HERE',
+    // conversation_id: 'YOU CAN DEFINE CONVERSATION ID HERE, IT MUST BE A VALID UUID',
+  },
+  userVariables: {
+    // avatar_url: 'YOU CAN DEFINE USER AVATAR URL HERE',
+    // name: 'YOU CAN DEFINE USER NAME HERE',
+  },
  }
 </script>
 <script
