--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 <script>
  window.difyChatbotConfig = {
-  token: 'u6ZRgC965S5ppUAP',
+  token: 'g34M0LETdslNoHZK',
   // Forzamos el título en la configuración del cliente
   title: 'Asistente Virtual sobre la ley C.U.R.A.',
   containerProps: {
@@ -1329,7 +1329,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 <script
  src="https://udify.app/embed.min.js"
- id="u6ZRgC965S5ppUAP"
+ id="g34M0LETdslNoHZK"
  defer>
 </script>
 
