--- a/Informacion/beneficios.html
+++ b/Informacion/beneficios.html
@@ -53,24 +53,25 @@
 </head>
 <body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark">
 
-  <header class="sticky top-0 z-30 bg-cura-primaryDark/80 backdrop-blur-md text-white border-b border-white/10 shadow-sm">
-    <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between">
-      <a href="/index.html" class="flex items-center gap-2 group">
-        <img src="/logo.png" alt="Logo" class="h-10 w-auto object-contain transition-transform group-hover:scale-105" />
+
+  <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
+    <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
+      <div class="flex items-center gap-2">
+        <img src="/Informacion/logo.png" alt="Logo C.U.R.A." class="h-16 w-auto object-contain shrink-0" />
         <div class="leading-tight">
-          <p class="text-[9px] uppercase tracking-[0.2em] text-cura-accentLight">LEY NACIONAL</p>
-          <p class="text-xs font-bold">C.U.R.A.</p>
+          <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
+          <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
         </div>
-      </a>
-           <nav class="flex items-center gap-6 text-sm font-medium">
-        <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+      </div>
+      <nav class="flex items-center gap-6 text-sm font-medium">
+          <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
         <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver</a>
         <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumarme</a>
         <a href="/demo.html" class="bg-cura-accent text-cura-primaryDark px-4 py-1.5 rounded-full text-xs font-bold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
   </header>
-
+  
   <main class="max-w-4xl mx-auto px-6 py-12 md:py-20">
     <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
       <a href="/Informacion/informacion" class="hover:underline">Información</a>
