--- a/Informacion/fundamentos.html
+++ b/Informacion/fundamentos.html
@@ -61,13 +61,10 @@
       <span class="text-white font-semibold">Fundamentos de la Ley</span>
     </nav>
 
-    <div class="mb-12 text-center md:text-left">
+    <div class="mb-12">
       <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
-        Fundamentos Políticos y Técnicos
+        Fundamentos de la Ley
       </h1>
-      <p class="text-cura-accentLight max-w-2xl">
-        Los pilares estructurales que sostienen la mayor transformación del sistema sanitario argentino.
-      </p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -75,56 +72,75 @@
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
         <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
           <i class="ph-bold ph-intersect text-cura-accent text-2xl"></i>
-          Fin de la Fragmentación
+          1. El Fin de la Fragmentación Sanitaria
         </h3>
         <p class="text-sm text-cura-accentLight leading-relaxed">
-          Respuesta estructural a las "islas de datos". Establece una <strong>red sanitaria federal única</strong> donde el historial clínico pertenece al ciudadano y no a la institución.
+          La Ley C.U.R.A. surge como la respuesta estructural al sistema de salud más fragmentado de la región. Actualmente, la información clínica está dispersa en miles de "islas de datos" que no se comunican entre sí. Esta ley establece una <strong>red sanitaria federal única e interoperable</strong>, garantizando que el historial clínico no pertenezca a la institución, sino al ciudadano.
         </p>
       </div>
 
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
         <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
           <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
-          Federalismo de Concertación
+          2. Federalismo de Concertación y el Pacto de Mayo
         </h3>
         <p class="text-sm text-cura-accentLight leading-relaxed">
-          En sintonía con el <strong>Pacto de Mayo</strong>. Una herramienta que permite a las provincias modernizarse y alcanzar el equilibrio fiscal sin perder su autonomía jurisdiccional.
+          En sintonía con el <strong>Pacto de Mayo</strong>, el proyecto se apoya en la institucionalidad del <strong>Consejo de Mayo</strong>. No es una imposición centralista, sino una herramienta de <strong>Federalismo de Concertación</strong> que permite a las provincias modernizar su infraestructura, alcanzar el equilibrio fiscal y mejorar la calidad prestacional sin perder su autonomía jurisdiccional.
         </p>
       </div>
 
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
         <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
           <i class="ph-bold ph-chart-line-up text-cura-accent text-2xl"></i>
-          Eficiencia Macroeconómica
+          3. Eficiencia Fiscal y Equilibrio Macroeconómico
         </h3>
         <p class="text-sm text-cura-accentLight leading-relaxed">
-          Austeridad inteligente: elimina el <strong>gasto improductivo</strong> (estudios duplicados y burocracia física) para reasignar recursos hacia insumos críticos.
+          La digitalización total no es solo una mejora tecnológica, es una política de austeridad inteligente. Al eliminar el <strong>gasto sanitario improductivo</strong> (duplicación de estudios, recetas manuales y burocracia física), se proyecta una reducción del gasto público real, permitiendo reasignar recursos hacia insumos críticos y equipamiento de alta complejidad.
         </p>
       </div>
 
-      <i class="ph ph-shield-check"></i>
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
         <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
           <i class="ph-bold ph-globe-hemisphere-west text-cura-accent text-2xl"></i>
-          Soberanía y Privacidad
+          4. Interoperabilidad como Cuestión de Estado
         </h3>
         <p class="text-sm text-cura-accentLight leading-relaxed">
-          Toda la infraestructura se mantiene bajo jurisdicción nacional con <strong>Privacidad por Diseño</strong> y criptografía inmutable de última generación.
+          La ley eleva los estándares internacionales <strong>HL7 FHIR y SNOMED CT</strong> a nivel de <strong>Orden Público</strong>. La capacidad de que los sistemas "hablen el mismo idioma" deja de ser una opción técnica para convertirse en una obligación legal, garantizando que un diagnóstico sea legible y accionable en todo el país.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-shield-check text-cura-accent text-2xl"></i>
+          5. Soberanía Sanitaria y Privacidad por Diseño
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Bajo el principio de <strong>Soberanía Sanitaria Digital</strong>, toda la infraestructura y el procesamiento de datos críticos se mantienen bajo jurisdicción nacional. Se implementan mecanismos de <strong>Privacidad por Diseño</strong>, asegurando que el acceso esté estrictamente auditado y protegido por criptografía.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-users text-cura-accent text-2xl"></i>
+          6. Humanización de la Atención
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Al devolverle tiempo al médico —eliminando la carga administrativa— y seguridad al paciente —evitando errores por falta de antecedentes—, la tecnología de C.U.R.A. actúa como un puente hacia una atención más humana, digna y transparente.
         </p>
       </div>
 
       <div class="md:col-span-2 bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-1">
         <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
           <i class="ph-bold ph-brain text-cura-accent text-3xl"></i>
-          Salud Mental y Teleconsulta Federal
+          7. Salud Mental y Estrategia Nacional de Acceso
         </h3>
         <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
-          Protocolos de confidencialidad reforzada que eliminan las listas de espera mediante la <strong>federalización de la oferta profesional</strong>. Optimiza recursos reservando la presencialidad para casos críticos y adultos mayores, uniendo lo físico con lo psíquico de forma segura.
+          La ley integra la salud mental en la Historia Clínica Única con <strong>protocolos de confidencialidad reforzada</strong> y encriptación superior. Para resolver la saturación del sistema, implementa un modelo de <strong>Asignación Eficiente de Recursos</strong>: se reserva la atención presencial para casos críticos y adultos mayores, mientras que para el paciente digital se prioriza la <strong>Teleconsulta Federal</strong>. Esto elimina las listas de espera locales mediante la federalización de la oferta profesional y la validez nacional de la matrícula remota, garantizando un abordaje holístico, inmediato y seguro que une lo físico con lo psíquico.
         </p>
       </div>
     </div>
 
-    <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
+    <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
       <p class="text-cura-accentLight text-sm italic">Hacia una salud más justa, eficiente y humana.</p>
       <a href="/Informacion/financiamiento" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
         Siguiente: Financiamiento
@@ -136,5 +152,6 @@
   <footer class="py-12 border-t border-white/10 text-center mt-auto">
     <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-</body>
+
+  </body>
 </html>
